[gd_scene load_steps=2 format=3 uid="uid://cqc8skcu3wrj7"]

[ext_resource type="Script" uid="uid://hs4lm2a0le6x" path="res://scenes/player/Attack/IceSpear/ice_spear.gd" id="1_jkvxq"]

[node name="IceSpear" type="Node2D"]
script = ExtResource("1_jkvxq")
level = 0

[node name="AbilityTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="AttackTimer" type="Timer" parent="AbilityTimer"]
unique_name_in_owner = true

[connection signal="timeout" from="AbilityTimer" to="." method="_on_ability_timer_timeout"]
[connection signal="timeout" from="AbilityTimer/AttackTimer" to="." method="_on_attack_timer_timeout"]
